<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <com.google.android.material.appbar.MaterialToolbar
            style="@style/Widget.MaterialComponents.Toolbar"
            app:navigationIcon="@drawable/ic_arrow_back_black_24dp"
            app:navigationIconTint="?attr/colorOnSurface"
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:buttonGravity="center_vertical"
            android:paddingEnd="32dp"
            app:title="@string/app_name"
            />
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/rationale_text"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:maxWidth="270dp"
        android:text="@string/rationale_text"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
        app:layout_constraintBottom_toTopOf="@id/button_quit"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar_layout"
        app:layout_constraintVertical_bias="0.24000001"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_quit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/rationale_quit_button"
        style="@style/Widget.Material3.Button.TextButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/proceed_button"
        app:layout_constraintStart_toStartOf="@id/rationale_text"
        app:layout_constraintTop_toBottomOf="@id/rationale_text" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/proceed_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Widget.Material3.Button.TextButton"
        app:layout_constraintTop_toTopOf="@id/button_quit"
        app:layout_constraintBottom_toBottomOf="@id/button_quit"
        app:layout_constraintStart_toEndOf="@id/button_quit"
        app:layout_constraintEnd_toEndOf="@id/rationale_text"
        android:text="@string/rational_proceed_button" />


</androidx.constraintlayout.widget.ConstraintLayout>