<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScannerFragment"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar_layout"
        app:layout_constraintWidth_max="500dp"
        app:layout_constraintVertical_bias="0.2"
        android:background="@drawable/card_bg"

        >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"

        >



        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_a_device_to_connect_to"

            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:labelFor="@id/recycler_view"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            android:textColor="?android:textColorSecondary"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/searching_panel"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"

            android:visibility="gone"

            app:layout_constraintBottom_toTopOf="@id/help_button"
            app:layout_constraintTop_toBottomOf="@id/caption">

            <TextView
                android:id="@+id/searching_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:alpha="0.75"
                android:text="@string/searching"
                android:gravity="center"

                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textColor="?android:textColorSecondary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/progress" />

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:textAlignment="center"
                app:layout_constraintBottom_toTopOf="@id/searching_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.35"
                app:layout_constraintVertical_chainStyle="packed"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintTop_toBottomOf="@id/caption"
            app:layout_constraintBottom_toTopOf="@id/help_button"
            android:visibility="gone"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/error_panel"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:visibility="visible"

            app:layout_constraintBottom_toTopOf="@id/help_button"
            app:layout_constraintTop_toBottomOf="@id/caption">

            <TextView
                android:id="@+id/error_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/dummy_text"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.Material3.BodySmall"
                android:textColor="?android:textColorSecondary"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/connect_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/connect_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintVertical_chainStyle="packed"
                android:text="@string/connect_hint"
                android:textAppearance="@style/TextAppearance.Material3.BodySmall"
                app:layout_constraintTop_toBottomOf="@id/error_text"
                app:layout_constraintBottom_toTopOf="@id/wifi_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="0.25"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/wifi_button"
                android:layout_marginTop="0dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connect_to_wi_fi_network"
                app:layout_constraintTop_toBottomOf="@id/connect_hint"
                app:layout_constraintBottom_toTopOf="@id/ip_address_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/Widget.Material3.Button.TextButton.Dialog"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/ip_address_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connect_to_ip_address"
                app:layout_constraintTop_toBottomOf="@id/wifi_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/Widget.Material3.Button.TextButton.Dialog"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/help_button"
            style="@style/Widget.Material3.Button.TextButton"
            app:icon="@drawable/ic_help_24px"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/cancel_button"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="16dp"/>

        <com.google.android.material.button.MaterialButton

            android:id="@+id/cancel_button"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            app:layout_constraintTop_toTopOf="@id/help_button"
            app:layout_constraintEnd_toStartOf="@id/scan_again_button"
            app:layout_constraintStart_toEndOf="@id/help_button"
            android:layout_marginStart="16dp"

            android:layout_marginEnd="32dp"/>

        <com.google.android.material.button.MaterialButton

            android:id="@+id/scan_again_button"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"

            android:text="@string/scan_again"
            app:layout_constraintTop_toTopOf="@id/help_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.87"
            app:layout_constraintStart_toEndOf="@id/cancel_button"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="32dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/transparent"

        >

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/app_bar"
            style="@style/Widget.MaterialComponents.Toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:paddingEnd="32dp"
            app:buttonGravity="center_vertical"
            app:navigationIcon="@drawable/ic_arrow_back_black_24dp"
            app:navigationIconTint="?attr/colorOnSurface"
            app:title="@string/app_name" />
    </com.google.android.material.appbar.AppBarLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
