<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    app:layout_constraintWidth_default="percent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/app_bar"
            style="@style/Widget.MaterialComponents.Toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:paddingEnd="32dp"
            app:buttonGravity="center_vertical"
            app:navigationIcon="@drawable/ic_arrow_back_black_24dp"
            app:navigationIconTint="?attr/colorOnSurface"
            app:title="@string/app_name"
            tools:ignore="RtlSymmetry" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar_layout">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="24dp"
            >
            <TextView android:layout_width="match_parent"
                android:id="@+id/title"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/sponsorship_title"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                />

            <FrameLayout
                android:id="@+id/sponsorship_frame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="0dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="48dp"
                android:background="?attr/colorSurface"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title"
                app:layout_constraintWidth_max="330dp"
                app:layout_goneMarginStart="16dp">

                <TextView
                    android:id="@+id/sponsorship_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="3sp"
                    android:text="@string/sponsorship_pitch"
                    android:textSize="14sp"
                    app:layout_constraintTop_toTopOf="parent" />
            </FrameLayout>

            <TextView
                android:id="@+id/billing_status_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="3sp"
                android:text="@string/dummy_text"
                android:textSize="14sp"
                android:layout_marginBottom="16dp"
                app:layout_constraintTop_toBottomOf="@id/sponsorship_frame"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/donor_recycler_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="0dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintEnd_toEndOf="@id/sponsor_recycler_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/billing_status_text"

                app:layout_constraintWidth_max="270dp"
                app:layout_constraintWidth_percent="0.8"

                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/sponsor_recycler_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="@id/donor_recycler_view"
                app:layout_constraintTop_toBottomOf="@id/donor_recycler_view"

                app:layout_constraintWidth_max="270dp"
                app:layout_constraintWidth_percent="0.8"

                />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>